// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <RedirectButton /> rendering should render redirect button correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <div
      className="undefined redirect-button__box"
    >
      <div
        className="label"
      />
      <div
        className="redirect-button__box-p redirect-button__box-p-1"
        key="redirect-button-1"
      >
        dit is een tekst
      </div>
      <div>
        <a
          className="action primary"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Form component <RedirectButton /> rendering should render redirect button correctly array of values 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <div
      className="undefined redirect-button__box"
    >
      <div
        className="label"
      />
      <div
        className="redirect-button__box-p redirect-button__box-p-1"
        key="redirect-button-1"
      >
        dit is een tekst 1
      </div>
      <div
        className="redirect-button__box-p redirect-button__box-p-2"
        key="redirect-button-2"
      >
        dit is een tekst 2
      </div>
      <div>
        <a
          className="action primary"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Form component <RedirectButton /> rendering should render redirect button correctly with button 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <div
      className="undefined redirect-button__box"
    >
      <div
        className="label"
      />
      <div
        className="redirect-button__box-p redirect-button__box-p-1"
        key="redirect-button-1"
      >
        dit is een tekst
      </div>
      <div>
        <a
          className="action primary"
          href="http://somewhere.com/over/here"
        >
          Redirect now!
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form component <RedirectButton /> rendering should render redirect button correctly with button and redirect timeout 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <div
      className="undefined redirect-button__box"
    >
      <div
        className="label"
      />
      <div
        className="redirect-button__box-p redirect-button__box-p-1"
        key="redirect-button-1"
      >
        dit is een tekst
      </div>
      <div
        className="redirect-button__box-p"
      >
        U wordt automatisch doorgestuurd binnen 
        0.1
         seconden.
      </div>
      <div>
        <a
          className="action primary"
          href="http://somewhere.com/over/here"
        >
          Redirect now!
        </a>
      </div>
    </div>
  </div>
</div>
`;
